# NEE

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  GLFW-3.cbp  GLFW-3.cbp.save  GLFW-3.cscope_file_list  GLFW-3.depend  GLFW-3.layout  GLFW-3.layout.save  README.MD  README.md  conanfile.txt  main.cpp  main.cpp.save-failed  version.h  version.h.gch
.github/workflows/: cmake.yml
config/: settings.json
fonts/: Anonymous_Pro.fnt  MagistralIC.fnt  MagistralIC_UTF-8.fnt  MagistralIC_smooth.fnt  Tahoma.fnt
include/: Assistant.h  Billboard.h  BillboardAssistant.h  BillboardAssistant.h.save  Camera.h  EngineCommon.h  Font2d.h  GBuffer.h  GameConsole.h  Light.h  Line.h  Logger.h  Material.h  MaterialObject.h  Mesh.h  Object.h  ParticleSystem.h  ParticleUpdateAssistant.h  PerlinNoise.h  PlaceableObject.h  RandomTexture.h  Rectangle2D.h  RenderableObject.h  RotatableObject.h  ScaleableObject.h  Shader.h  Shader.h.save  ShaderFunctions.h  ShadowMapFBO.h  ShadowMapFBO.h.save  Text_2D.h  Texture.h  UiBase.h  UiBase.h.save  cubemap_texture.h  main.h  math_3d.h  skybox.h  tga_loader.h  util.h  (+1 more)
include/Render/: IRenderable.hpp  TransformComponent.hpp
include/Shader/: IShader.hpp  IShaderProgram.hpp  Shader.h  Shader.hpp  ShaderProgram.hpp
models/: cone.ho3d  cone2.hod  cube.ho3d  cube.hod  cube2x2x2.ho3d  cube2x2x2.hod  normal_geosphere.ho3d  normal_geosphere.hod  normal_plane.hod  normal_sphere.hod  plane.ho3d  plane.hod  pyramid.hod  quad2x2back.ho3d  quad2x2back.hod  quad2x2front.hod  sphere.ho3d  teapot.hod  teapot2.ho3d  teapot2.hod  torus-test.ho3d  torus.hod  triangle.hod
screenshots/: Screenshot 03-07-2014 05.45.20.tga  Screenshot 03-07-2014 10.34.42.tga  Screenshot 06-09-2014 07.29.54.tga  Screenshot 10-01-2015 04.47.34.tga  Screenshot 13-11-2014 12.18.19.tga  Screenshot 16-08-2015 01.17.41.tga  Screenshot 16-08-2015 12.49.06.tga  Screenshot 20-02-2014 02.08.44.tga  Screenshot 23-08-2014 08.58.50.tga  Screenshot 23-08-2014 08.58.52.tga  Screenshot 24-07-2014 09.26.10.tga  Screenshot 25-08-2014 08.52.55.tga  Screenshot 26-01-2015 04.28.15.tga  Screenshot 28-07-2014 03.13.21.tga
shaders/: DSDirectionalLight.fs  DSDirectionalLight.vs  DSGeometryPass.fs  DSGeometryPass.fsh  DSGeometryPass.vs  DSGeometryPass.vsh  DSPointLight.fs  DSPointLight.vs  DSSpotLight.fs  DSSpotLight.vs  DSSpotLight.vsh  DSStencilPass.vs  DSStencilPass.vsh  billboard.fs  billboard.fsh  billboard.gs  billboard.gsh  billboard.vs  fbo.fs  fbo.fsh  fbo.vs  fragmentShader.fs  fragmentShader.fsh  lightFS.fs  lightFS.fsh  lightVS.vs  lightVS.vsh  particle.gs  particle.vs  particle.vsh  shadowed.fs  shadowed.fsh  shadowed.vs  shadowed.vsh  skybox.fs  skybox.fsh  skybox.vs  skybox.vsh  text2d.fs  text2d.fsh  (+4 more)
src/: Assistant.cpp  Assistant.h  Billboard.cpp  Billboard.cpp.save  BillboardAssistant.cpp  BillboardAssistant.cpp.save  CMakeLists.txt  Camera.cpp  Camera.h  Font2d.cpp  Font2d.h  GBuffer.cpp  GameConsole.cpp  GameConsole.h  Light.cpp  Light.h  Logger.cpp  Logger.h  Material.cpp  Material.h  MaterialObject.cpp  MaterialObject.h  Mesh.cpp  Mesh.h  Object.cpp  ParticleSystem.cpp  ParticleUpdateAssistant.cpp  ParticleUpdateAssistant.cpp.save  PerlinNoise.cpp  PerlinNoise.h  PlaceableObject.cpp  PlaceableObject.h  RandomTexture.cpp  RandomTexture.h  Rectangle2D.cpp  Rectangle2D.h  RenderableObject.cpp  RenderableObject.h  RotatableObject.cpp  RotatableObject.h  (+31 more)
src — копия/: Billboard.cpp  Billboard.h.save  BillboardAssistant.cpp  Camera.cpp  Camera.cpp.save  GameConsole.cpp  Light.cpp  Light.cpp.save  Line.cpp  Material.cpp  Mesh.cpp  Mesh.cpp.save  Mesh.h.save  ParticleSystem.cpp.save  ParticleSystem.h.save  ParticleUpdateAssistant.cpp  PerlinNoise.cpp  Shader.cpp  ShadowMapFBO.cpp  Skybox.cpp  Skybox.cpp.save  Text_2D.h.save  main.cpp  math_3d.cpp.save  math_3d.h.save  tga_loader.cpp
src/Application/: Applcation.cpp  Application.h
src/Camera/: Camera.cpp  Camera.h
src/Font/: Font.cpp  Font.h  FontCharacter.h
src/Line/: Line.h
src/Mesh/: WiredMesh.h
src/SOIL/: SOIL.cpp  stb_image_aug.cpp
src/Shader/: Shader.cpp  Shader.h  ShaderProgram.cpp
src/Simple OpenGL Image Library/src/: SOIL.c
src/VulkanAdapter/: VulkanAdapter.cpp  VulkanAdapter.h
tests/: CMakeLists.txt  UnitTests.cpp
tests/Shader/: ShaderTest.cpp
textures/: Anonymus Bold 512x256-2.tga  Anonymus Bold 512x256.tga  Lucida Console.tga  Tahoma.tga  Tahoma_a.tga  checker.tga  normal_map.tga  specular.tga
